Add support for Java JMX
Also provide a macro for exposing JMX metrics to Prometheus